Version 1.6 -Tau Ceti-

* [NEW] Wiki pages can be renamed.
* [CHG] Comment and link to diff are now informed when notifying that a page
  has changed
* [NEW] Option to allow users to lock a page and only the user who locked the
  page can unlock it. 
* [NEW] Handlers can be defined to change how wiki pages and other objects 
  are parsed, you can define pre-handlers and pos-handlers. See the file
  tiki-handlers.php
* [NEW] Some tiki objects can be saved in 1-click to the user notepad.
* [NEW] Mini calendar for events by user with daily, weekly and lit view, 
  event topics, find events, etc.
* [NEW] Users can configure if they want to double-click to
  edit wiki pages.
* [NEW] Themes can redefine ANY template of Tiki, just create the template in
  the templates/styles/name directory and Tiki will use that file. If the file
  is not there it will default to the templates directory. (McKenna)
* [NEW] Alternative syntax for tables, you can sepparate rows using line
  returns instead of ||. You have to select which syntax to use in the admin
  screen.
* [NEW] Admin menu submit buttons now get back to the admin section where the
  submited information was found.
* [NEW] User menus, the user can add items to the application menu, an option 
  to automatically add top-level bookmarks to the menu is provided.
* [NEW] Theme control center: if activated you can control the theme by 
  section, by category or by specific object. (Laporte)
* [NEW] Ephemerides feature: admin can set up images/texts for specific dates, 
  users can browse using the calendar to get the images/texts for any day. A 
  module is provided to display the image/text for the day, if many one is 
  choosen randomly.
* [NEW] User files section, users can store personal files and download them 
  whenever they want, files are only visible to the user. Admin can control a 
  disk quota for each user.
* [NEW] User Notepads section added, users can sketch notes view them and 